--- a/home.html
+++ b/home.html
@@ -6,20 +6,20 @@
 <body>
 
 <script>
-fetchArticles=(callback)=>{
+Get=(callback)=>{
         //let currentState = this.state.articles 
-        fetch(`https://api.nytimes.com/svc/mostpopular/v2/shared/1/facebook.json?api-key=wix8qQtrlfoaYBPGri0uA6r0xy8GMkQP`)
-        .then((res) => await callback(res.json()) );
-        //.then((json) => this.setState({articles: [...currentState, json.response.docs]}));
+        fetch(`https://api.nytimes.com/svc/mostpopular/v2/shared/1.json?api-key=wix8qQtrlfoaYBPGri0uA6r0xy8GMkQP`)
+        .then((res) => callback(res.json()) );
+        
 
 }
 
 //function call
-fetchArticles(DisplayResults);
+Get(Display);
 
 //processing callback function
-async function DisplayResults(data){
-    document.write(data);
+async function Display(results){
+    document.write(results);
 }
 
 </script>
